--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -10,7 +10,12 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <title>All-Mart</title>
+      <link
+              rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      />
+
+      <title>All-Mart</title>
   </head>
   <body>
     <div id="root"></div>
